--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,64 @@
-.App {
-  text-align: center;
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  display: block;
+  margin-left: 11%;
+  margin-top: 1%;
+  max-width: 23%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box {
+  background-color: black;
+  max-width: 100%;
+  height: 30px;
+}
+
+h1 {
+  font-size: 42px;
+  margin-top: 10px;
+  margin-left: 11%;
+  font-family: "Elysio-Light", Helvetica, Arial, sans-serif;
+  font-weight: lighter;
+  color: grey;
+}
+
+h4 {
+  font-size: 28px;
+  font-family: "Elysio-Light", Helvetica, Arial, sans-serif;
+  font-weight: lighter;
+  margin-top: -1px;
+  margin-bottom: -1px;
+}
+
+p {
+  font-size: 20px;
+  text-align: justify;
+  margin-right: 10px;
+  margin-bottom: 90px;
+  color: grey;
+}
+
+a {
+  color: green;
+  text-decoration: none;
+}
+
+.container {
+  margin-right: 10%;
+  margin-left: 10%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: row wrap;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wrapper {
+  width: calc(100% / 3);
+  /* text-align: center; */
+  margin-bottom: 10px;
+  margin-top: 10px;
+  border: 10px;
 }
